--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,24 @@
-<p>user works!</p>
+<h1>Usuarios Registrados</h1>
+<div class="clear"></div>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Primer Nombre</th>
+        <th scope="col">Segundo Nombre</th>
+        <th scope="col">Primer Apellido</th>
+        <th scope="col">Segundo Apellido</th>
+        <th scope="col">Teléfono</th>
+        <th scope="col">Dirección</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>Pérez</td>
+        <td></td>
+        <td>4445555</td>
+        <td>Calle 2</td>
+      </tr>
+    </tbody>
+  </table>
