Create user screen is working with validations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="clear"></div>
 <button type="button" [routerLink]="['/userComponent']" class="btn btn-primary">Usuarios</button>
 <th></th>
-<button type="button" class="btn btn-success">Agregar Usuario</button>
+<th></th>
+<button type="button" [routerLink]="['/createUserComponent']" class="btn btn-success">Agregar Usuario</button>
 <router-outlet></router-outlet>
